Implement basic Jigsaw compilation support